--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend Software Ingresos y Egresos",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/zionweb/BACKEND/issues"
   },
-  "homepage": "https://github.com/zionweb/BACKEND#readme"
+  "homepage": "https://github.com/zionweb/BACKEND#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "express-myconnection": "^1.0.4",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.0.1"
+  }
 }
